[package]
name = "hellorust"
version = "0.1.0"
edition = "2021"
authors=["trafton"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = {version = "0.8.7",features = ["serde"]}
specs = {version="0.19.0", features = ["serde"]}
specs-derive = "0.4.1"
serde= { version = "1.0.93", features = ["derive"] }
serde_json = { version = "1.0.39", features = [] }
